# KoeRelay

./: .gitignore  PLAN.md  README.md  config.yaml.example  pyproject.toml  run.bat
.github/workflows/: release.yml
docs/: irodori-tts-lite-investigation.md
koerelay/: __init__.py  config.py  gpu_lock.py  hotkey.py  main.py  pipeline.py  services.py  settings.py  updater.py
koerelay/stt/: __init__.py  device.py  mic.py  recognizer.py  remote.py
koerelay/tts/: __init__.py  irodori.py  manager.py  player.py  server.py
koerelay/ui/: __init__.py  settings_dialog.py  tray.py
packaging/: koerelay.spec  launcher.py
packaging/hooks/: hook-webrtcvad.py
stt_server/: server.py  start.sh
